--- a/src/index.html
+++ b/src/index.html
@@ -40,14 +40,14 @@
   <body>
     <!--header-->
     <header class="header">
-      <!--loading-->
+      <!--loading
       <div class="js-loading__start">
         <div class="topFV-texts topFV-texts--loading">
           <h1 class="topFV-main-text">DIVING</h1>
           <p class="topFV-sub-text">into the ocean</p>
         </div>
       </div>
-      <div class="js-loading__" id="loading">
+      <div class="js-loading" id="loading">
         <div class="js-loading__flex">
           <div class="js-loading__left"></div>
           <div class="js-loading__right"></div>
@@ -58,7 +58,7 @@
           <h1 class="topFV-main-text">DIVING</h1>
           <p class="topFV-sub-text">into the ocean</p>
         </div>
-      </div>
+      </div>-->
       <!--SP-hamburger-header-->
       <div class="header__inner">
         <div class="logo logo--header"><img src="./assets/images/common/logo.png" alt="logo" /></div>
