--- a/src/index.html
+++ b/src/index.html
@@ -188,33 +188,33 @@
     </header>
     <main>
       <!--first-view-->
-      <div class="swiper topFVswiper" id="js-topFV-swiper">
-        <div class="topFV-wrapper swiper-wrapper">
-          <picture class="swiper-slide topFV-swiper-slide">
+      <div class="swiper topFVswiper" id="js-topFVswiper">
+        <div class="topFVswiper__wrapper swiper-wrapper">
+          <picture class="swiper-slide topFVswiper__slide">
             <source srcset="./assets/images/common/FV-pc1.png" media="(min-width: 768px)" />
             <source srcset="./assets/images/common/FV-sp1.png" media="(min-width: 767px)" />
             <img src="./assets/images/common/FV-sp1.png" alt="海の中を泳ぐウミガメ"
           /></picture>
-          <picture class="swiper-slide topFV-swiper-slide">
+          <picture class="swiper-slide topFVswiper__slide">
             <source srcset="./assets/images/common/FV-pc2.png" media="(min-width: 768px)" />
             <source srcset="./assets/images/common/FV-sp2.png" media="(min-width: 767px)" />
             <img src="./assets/images/common/FV-sp2.png" alt="海の中でウミガメとダイビングを楽しむ二人組"
           /></picture>
-          <picture class="swiper-slide topFV-swiper-slide">
+          <picture class="swiper-slide topFVswiper__slide">
             <source srcset="./assets/images/common/FV-pc3.png" media="(min-width: 768px)" />
             <source srcset="./assets/images/common/FV-sp3.png" media="(min-width: 767px)" />
             <img src="./assets/images/common/FV-sp3.png" alt="日光がさす青空と海"
           /></picture>
-          <picture class="swiper-slide topFV-swiper-slide">
+          <picture class="swiper-slide topFVswiper__slide">
             <source srcset="./assets/images/common/FV-pc4.png" media="(min-width: 768px)" />
             <source srcset="./assets/images/common/FV-sp4.png" media="(min-width: 767px)" />
             <img src="./assets/images/common/FV-sp4.png" alt="青空と砂浜"
           /></picture>
         </div>
       </div>
-      <div class="topFV-texts">
-        <h1 class="topFV-main-text">DIVING</h1>
-        <p class="topFV-sub-text">into the ocean</p>
+      <div class="topFVswiper__texts">
+        <h1 class="topFVswiper__main-text">DIVING</h1>
+        <p class="topFVswiper__sub-text">into the ocean</p>
       </div>
       <!--Campaign-->
       <section class="top-campaign top-campaign-wrapper">
@@ -231,81 +231,81 @@
           </div>
           <div class="swiper topCampaignSwiper" id="js-topCampaignSwiper">
             <div class="swiper-wrapper top-campaign__slider-wrapper">
-              <a href="#" class="swiper-slide top-campaign__slide">
-                <figure class="card__img card__img--campaign">
+              <a href="#" class="swiper-slide top-campaign__slide campaign-card">
+                <figure class="campaign-card__img">
                   <img src="./assets/images/common/campaign1.png" alt="色鮮やかな魚たちの写真" />
                 </figure>
-                <div class="card__body card__body--campaign">
-                  <div class="card__category">ライセンス講習</div>
-                  <div class="title-wrapper">
-                    <h3 class="title">ライセンス取得</h3>
+                <div class="campaign-card__body">
+                  <div class="campaign-card__catgory card__category">ライセンス講習</div>
+                  <div class="campaign-card__title-wrapper title-wrapper">
+                    <h3 class="campaign-card__title">ライセンス取得</h3>
                   </div>
                 </div>
-                <div class="card__contents">
-                  <p class="campaign-text">全部コミコミ(お一人様)</p>
-                  <div class="campaign-price-wrapper">
-                    <p class="campaign-pre-price">¥56,000</p>
-                    <p class="campaign-after-price">¥46,000</p>
+                <div class="campaign-card__contents">
+                  <p class="campaign-card__text">全部コミコミ(お一人様)</p>
+                  <div class="campaign-card__price-wrapper">
+                    <p class="campaign-card__pre-price">¥56,000</p>
+                    <p class="campaign-card__after-price">¥46,000</p>
                   </div>
                 </div>
               </a>
-              <a href="#" class="swiper-slide top-campaign__slide">
-                <figure class="card__img card__img--campaign">
+              <a href="#" class="swiper-slide top-campaign__slide campaign-card">
+                <figure class="campaign-card__img">
                   <img src="./assets/images/common/campaign2.png" alt="船とエメラルドグリーンのビーチ" />
                 </figure>
-                <div class="card__body card__body--campaign">
-                  <div class="card__category">体験ダイビング</div>
-                  <div class="title-wrapper">
-                    <h3 class="title">貸切体験ダイビング</h3>
+                <div class="campaign-card__body">
+                  <div class="campaign-card__catgory card__category">体験ダイビング</div>
+                  <div class="campaign-card__title-wrapper title-wrapper">
+                    <h3 class="campaign-card__title">貸切体験ダイビング</h3>
                   </div>
                 </div>
-                <div class="card__contents">
-                  <p class="campaign-text">全部コミコミ(お一人様)</p>
-                  <div class="campaign-price-wrapper">
-                    <p class="campaign-pre-price">¥24,000</p>
-                    <p class="campaign-after-price">¥18,000</p>
+                <div class="campaign-card__contents">
+                  <p class="campaign-card__text">全部コミコミ(お一人様)</p>
+                  <div class="campaign-card__price-wrapper">
+                    <p class="campaign-card__pre-price">¥24,000</p>
+                    <p class="campaign-card__after-price">¥18,000</p>
                   </div>
                 </div>
               </a>
-              <a href="#" class="swiper-slide top-campaign__slide">
-                <figure class="card__img card__img--campaign">
+              <a href="#" class="swiper-slide top-campaign__slide campaign-card">
+                <figure class="campaign-card__img">
                   <img src="./assets/images/common/campaign3.png" alt="小さなクラゲの大群" />
                 </figure>
-                <div class="card__body card__body--campaign">
-                  <div class="card__category">体験ダイビング</div>
-                  <div class="title-wrapper">
-                    <h3 class="title">ナイトダイビング</h3>
+                <div class="campaign-card__body">
+                  <div class="campaign-card__catgory card__category">体験ダイビング</div>
+                  <div class="campaign-card__title-wrapper title-wrapper">
+                    <h3 class="campaign-card__title">ナイトダイビング</h3>
                   </div>
                 </div>
-                <div class="card__contents">
-                  <p class="campaign-text">全部コミコミ(お一人様)</p>
-                  <div class="campaign-price-wrapper">
-                    <p class="campaign-pre-price">¥10,000</p>
-                    <p class="campaign-after-price">¥8,000</p>
+                <div class="campaign-card__contents">
+                  <p class="campaign-card__text">全部コミコミ(お一人様)</p>
+                  <div class="campaign-card__price-wrapper">
+                    <p class="campaign-card__pre-price">¥10,000</p>
+                    <p class="campaign-card__after-price">¥8,000</p>
                   </div>
                 </div>
               </a>
-              <a href="#" class="swiper-slide top-campaign__slide">
-                <figure class="card__img card__img--campaign">
+              <a href="#" class="swiper-slide top-campaign__slide  campaign-card">
+                <figure class="campaign-card__img">
                   <img src="./assets/images/common/campaign4.png" alt="ダイビングを楽しむ２人組" />
                 </figure>
-                <div class="card__body card__body--campaign">
-                  <div class="card__category">ファンダイビング</div>
-                  <div class="title-wrapper">
-                    <h3 class="title">貸切ファンダイビング</h3>
+                <div class="campaign-card__body">
+                  <div class="campaign-card__catgory card__category">ファンダイビング</div>
+                  <div class="campaign-card__title-wrapper title-wrapper">
+                    <h3 class="campaign-card__title">貸切ファンダイビング</h3>
                   </div>
                 </div>
-                <div class="card__contents">
-                  <p class="campaign-text">全部コミコミ(お一人様)</p>
-                  <div class="campaign-price-wrapper">
-                    <p class="campaign-pre-price">¥20,000</p>
-                    <p class="campaign-after-price">¥16,000</p>
+                <div class="campaign-card__contents">
+                  <p class="campaign-card__text">全部コミコミ(お一人様)</p>
+                  <div class="campaign-card__price-wrapper">
+                    <p class="campaign-card__pre-price">¥20,000</p>
+                    <p class="campaign-card__after-price">¥16,000</p>
                   </div>
                 </div>
               </a>
             </div>
           </div>
-          <div class="btn-wrapper btn-wrapper--campaign">
+          <div class="top-campaign__btn-wrapper">
             <a href="#" class="btn"
               >View more
               <span></span>
@@ -334,7 +334,7 @@
               <p class="top-about-us__main-text">Dive into<br />the Ocean</p>
               <div class="top-about-us__text">
                 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
-                <div class="top-about-us__btn-wrapper btn-wrapper">
+                <div class="top-about-us__btn-wrapper">
                   <a href="#" class="btn"
                     >View more
                     <span></span>
@@ -361,7 +361,7 @@
                   当店はダイビングライセンス（Cカード）世界最大の教育機関PADIの「正規店」として店舗登録されています。<br />
                   正規登録店として、安心安全に初めての方でも安心安全にライセンス取得をサポート致します。
                 </div>
-                <div class="btn-wrapper top-info__btn-wrapper">
+                <div class="top-info__btn-wrapper">
                   <a href="#" class="btn"
                     >View more
                     <span></span>
@@ -426,44 +426,44 @@
       <section class="top-voice top-voice-wrapper">
         <div class="inner top-voice__inner">
           <div class="top-voice__decoration-upper"><img src="./assets/images/common/decoration-fish-right.svg" alt="魚群のイラスト" /></div>
-          <div class="section-titles">
-            <p class="section-titles__english">Voice</p>
-            <h2 class="section-titles__japanese">お客様の声</h2>
+          <div class="top-voice__section-titles section-titles">
+            <p class="top-voice__section-titles__english section-titles__english">Voice</p>
+            <h2 class="top-voice__section-titles__japanese section-titles__japanese">お客様の声</h2>
           </div>
-          <div class="top-voice__cards-wrapper">
-            <div class="cards cards--voice">
-              <div class="card card--voice">
-                <div class="card__info">
-                  <div class="card__customer-data-wrapper">
-                    <div class="card__customer-data">
-                      <div class="card__customer-age">20代(女性)</div>
-                      <div class="card__category">ライセンス講習</div>
+          <div class="top-voice__cards-wrapper voice__cards">
+            <div class="top-voice__cards voice-cards">
+              <div class="voice-card">
+                <div class="voice-card__info">
+                  <div class="voice-card__customer-data-wrapper">
+                    <div class="voice-card__customer-data">
+                      <div class="voice-card__customer-age">20代(女性)</div>
+                      <div class="voice-card__category card__category">ライセンス講習</div>
                     </div>
-                    <div class="title-wrapper">
-                      <h3 class="title title--voice">ここにタイトルが入ります。ここにタイトル</h3>
+                    <div class="voice-card__title-wrapper">
+                      <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
                     </div>
                   </div>
-                  <div class="card__voice-img js-colorbox"><img src="./assets/images/common/voice1.png" alt="お客様女性の写真" /></div>
+                  <div class="voice-card__img js-colorbox"><img src="./assets/images/common/voice1.png" alt="お客様女性の写真" /></div>
                 </div>
-                <div class="card__text">
+                <div class="voice-card__text">
                   ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
                   ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
                 </div>
               </div>
-              <div class="card card--voice">
-                <div class="card__info">
-                  <div class="card__customer-data-wrapper">
-                    <div class="card__customer-data">
-                      <div class="card__customer-age">30代(男性)</div>
-                      <div class="card__category">ファンダイビング</div>
+              <div class="voice-card">
+                <div class="voice-card__info">
+                  <div class="voice-card__customer-data-wrapper">
+                    <div class="voice-card__customer-data">
+                      <div class="voice-card__customer-age">30代(男性)</div>
+                      <div class="voice-card__category card__category">ファンダイビング</div>
                     </div>
-                    <div class="title-wrapper">
-                      <h3 class="title title--voice">ここにタイトルが入ります。ここにタイトル</h3>
+                    <div class="voice-card__title-wrapper">
+                      <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
                     </div>
                   </div>
-                  <div class="card__voice-img js-colorbox"><img src="./assets/images/common/voice2.png" alt="お客様男性の写真" /></div>
+                  <div class="voice-card__img js-colorbox"><img src="./assets/images/common/voice2.png" alt="お客様男性の写真" /></div>
                 </div>
-                <div class="card__text">
+                <div class="voice-card__text">
                   ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
                   ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
                 </div>
@@ -559,7 +559,7 @@
               </dl>
             </div>
           </div>
-          <div class="top-price__btn-wrapper btn-wrapper">
+          <div class="top-price__btn-wrapper">
             <a href="#" class="btn"
               >View more
               <span></span>
@@ -593,7 +593,7 @@
               </div>
               <h2 class="section-titles__japanese section-titles__japanese--shadow">お問い合わせ</h2>
               <p class="contact-text">ご予約・お問い合わせはコチラ</p>
-              <div class="btn-wrapper btn-wrapper--in-content">
+              <div class="contact__btn-wrapper">
                 <a href="#" class="btn"
                   >Contact us
                   <span></span>
