--- a/src/index.html
+++ b/src/index.html
@@ -139,7 +139,7 @@
           <div class="header__site-map site-map header__site-map">
             <div class="site-map__sp-layout header__site-map__sp-layout">
               <div class="site-map__content header__site-map__content">
-                <div class="site-map__main-title"><a href="#">キャンペーン</a></div>
+                <div class="site-map__main-title site-map__main-title--hamburger"><a href="#">キャンペーン</a></div>
                 <div class="site-map__sub-group">
                   <ul class="site-map__sub-titles">
                     <li class="site-map__sub-title"><a href="#">ライセンス取得</a></li>
@@ -163,7 +163,7 @@
             </div>
             <div class="site-map__sp-layout">
               <div class="site-map__main">
-                <div class="site-map__main-title"><a href="#">お客様の声</a></div>
+                <div class="site-map__main-title site-map__main-title--hamburger"><a href="#">お客様の声</a></div>
                 <div class="site-map__main-title"><a href="#">料金一覧</a></div>
                 <div class="site-map__sub">
                   <ul class="site-map__sub-titles">
@@ -483,8 +483,8 @@
       <section class="top-price top-price-wrapper">
         <div class="inner top-price__inner">
           <div class="top-price__section-titles section-titles">
-            <p class="section-titles__english">Price</p>
-            <h2 class="section-titles__japanese">料金一覧</h2>
+            <p class="top-price__section-titles__english section-titles__english">Price</p>
+            <h2 class="top-price__section-titles__japanese section-titles__japanese">料金一覧</h2>
           </div>
           <div class="top-price__contents-wrapper">
             <picture class="top-price__img js-colorbox">
@@ -588,10 +588,10 @@
               </div>
             </div>
             <div class="contact__content">
-              <div class="section-titles">
-                <p class="section-titles__english section-titles__english--big">Contact</p>
+              <div class="contact__section-titles">
+                <p class="contact__section-titles__english">Contact</p>
               </div>
-              <h2 class="section-titles__japanese section-titles__japanese--shadow">お問い合わせ</h2>
+              <h2 class="contact__section-titles__japanese">お問い合わせ</h2>
               <p class="contact-text">ご予約・お問い合わせはコチラ</p>
               <div class="contact__btn-wrapper">
                 <a href="#" class="btn"
