--- a/src/index.html
+++ b/src/index.html
@@ -38,12 +38,11 @@
     <script defer src="./assets/js/script.js" defer></script>
   </head>
   <body>
-    <!--header-->
     <!--loading
       <div class="top-js-loading__start">
-        <div class="topFV-texts topFV-texts--loading">
-          <h1 class="topFV-main-text">DIVING</h1>
-          <p class="topFV-sub-text">into the ocean</p>
+        <div class="top-js-loading__topFV-texts topFV-texts">
+          <h1 class="top-js-loading__topFV-main-text topFV-main-text">DIVING</h1>
+          <p class="top-js-loading__topFV-sub-text topFV-sub-text">into the ocean</p>
         </div>
       </div>
       <div class="top-js-loading__middle">
@@ -56,6 +55,7 @@
           <p class="topFV-sub-text">into the ocean</p>
         </div>
       </div>-->
+    <!--header-->
     <header class="header">
       <!--SP-hamburger-header-->
       <div class="header__inner">
@@ -315,26 +315,26 @@
         <!--inner閉じタグ-->
       </section>
       <!--About us-->
-      <section class="top-about-us top-about-us-wrapper">
+      <section class="about-us about-us-wrapper">
         <div class="inner">
-          <div class="top-about-us__section-titles section-titles">
-            <p class="top-about-us__section-titles__english section-titles__english">About us</p>
-            <h2 class="top-about-us_section-titles__japanese section-titles__japanese">私たちについて</h2>
+          <div class="about-us__section-titles section-titles">
+            <p class="about-us__section-titles__english section-titles__english">About us</p>
+            <h2 class="about-us_section-titles__japanese section-titles__japanese">私たちについて</h2>
           </div>
-          <div class="top-about-us__img-wrapper">
-            <div class="top-about-us__img about-us__img">
-              <div class="top-about-us__img-left about-us__img-left">
+          <div class="about-us__img-wrapper">
+            <div class="about-us__img about-us__img">
+              <div class="about-us__img-left about-us__img-left">
                 <img src="./assets/images/common/about-us-left.png" alt="沖縄の赤茶色の瓦屋根にシーサーが乗っていてこちらを見ている" />
               </div>
-              <div class="top-about-us__img-right about-us__img-right">
+              <div class="about-us__img-right about-us__img-right">
                 <img src="./assets/images/common/about-us-right.png" alt="海の中で黄色い熱帯魚が２匹向かい合っている" />
               </div>
             </div>
-            <div class="top-about-us__texts">
-              <p class="top-about-us__main-text">Dive into<br />the Ocean</p>
-              <div class="top-about-us__text">
+            <div class="about-us__texts">
+              <p class="about-us__main-text">Dive into<br />the Ocean</p>
+              <div class="about-us__text">
                 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
-                <div class="top-about-us__btn-wrapper">
+                <div class="about-us__btn-wrapper">
                   <a href="#" class="btn"
                     >View more
                     <span></span>
@@ -343,7 +343,7 @@
               </div>
             </div>
           </div>
-          <div class="top-about-us__decoration"><img src="./assets/images/common/about-us-decoratoin.png" alt="珊瑚のイラストe" /></div>
+          <div class="about-us__decoration"><img src="./assets/images/common/about-us-decoratoin.png" alt="珊瑚のイラストe" /></div>
         </div>
         <!--inner閉じタグ-->
       </section>
