--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
     <header class="header">
       <!--SP-hamburger-header-->
       <div class="header__inner">
-        <a class="header__logo"><img src="./assets/images/common/logo.png" alt="コードアップスのロゴ" /></a>
+        <a href="index.html" class="header__logo"><img src="./assets/images/common/logo.png" alt="コードアップスのロゴ" /></a>
         <div class="header__content">
           <div class="header__hamburger" id="js-header-hamburger"><span></span><span></span><span></span></div>
           <!--PC-header-->
@@ -614,7 +614,7 @@
       <div class="inner">
         <div class="footer__icons">
           <div class="footer__logo">
-            <a href="#"><img src="./assets/images/common/logo.png" alt="コードアップスのロゴ" /></a>
+            <a href="index.html"><img src="./assets/images/common/logo.png" alt="コードアップスのロゴ" /></a>
           </div>
           <div class="footer__sns-logos">
             <div class="footer__sns-logo">
