--- a/src/index.html
+++ b/src/index.html
@@ -46,8 +46,8 @@
         </div>
       </div>
       <div class="top-js-loading__middle">
-        <div class="top-js-loading__middle__left"></div>
-        <div class="top-js-loading__middle__right"></div>
+        <div class="top-js-loading__middle-left"></div>
+        <div class="top-js-loading__middle-right"></div>
       </div>
       <div class="top-js-loading__last">
         <div class="topFV-texts">
@@ -217,20 +217,20 @@
         <p class="topFVswiper__sub-text">into the ocean</p>
       </div>
       <!--Campaign-->
-      <section class="top-campaign top-campaign-wrapper">
+      <section class="topCampaign topCampaign-wrapper">
         <div class="inner">
-          <div class="top-campaign__swiper-button-relative">
+          <div class="topCampaign__swiper-button-relative">
             <div class="section-titles">
               <p class="section-titles__english">Campaign</p>
               <h2 class="section-titles__japanese">キャンペーン</h2>
             </div>
-            <div class="top-campaign__swiper-button-wrapper">
-              <div class="top-campaign__swiper-button-prev"></div>
-              <div class="top-campaign__swiper-button-next"></div>
+            <div class="topCampaign__swiper-button-wrapper">
+              <div class="topCampaign__swiper-button-prev"></div>
+              <div class="topCampaign__swiper-button-next"></div>
             </div>
           </div>
-          <div class="topCampaignSwiper swiper" id="js-topCampaignSwiper">
-            <div class="top-campaign__slider-wrapper swiper-wrapper">
+          <div class="topCampaign swiper" id="js-topCampaignSwiper">
+            <div class="topCampaign__slider-wrapper swiper-wrapper">
               <a href="#" class="campaign-card--slide swiper-slide">
                 <figure class="campaign-card__img">
                   <img src="./assets/images/common/campaign1.png" alt="色鮮やかな魚たちの写真" />
@@ -305,7 +305,7 @@
               </a>
             </div>
           </div>
-          <div class="top-campaign__btn-wrapper">
+          <div class="topCampaign__btn-wrapper">
             <a href="#" class="btn"
               >View more
               <span></span>
