--- a/src/index.html
+++ b/src/index.html
@@ -136,7 +136,7 @@
       <!--SP-header-->
       <div class="header__sp-nav">
         <div class="header__sp-nav-inner">
-          <div class="site-map">
+          <div class="header__site-map site-map">
             <div class="site-map__sp-layout">
               <div class="site-map__content">
                 <div class="site-map__main-title site-map__main-title--hamburger"><a href="#">キャンペーン</a></div>
@@ -176,7 +176,7 @@
               <ul class="site-map__main">
                 <li class="site-map__main-title"><a href="#">よくある質問</a></li>
                 <li class="site-map__main-title">
-                  <a href="#">プライバシー<br class="pc-none" />ポリシー</a>
+                  <a href="#">プライバシー<wbr />ポリシー</a>
                 </li>
                 <li class="site-map__main-title"><a href="#">利用規約</a></li>
                 <li class="site-map__main-title"><a href="#">お問い合わせ</a></li>
@@ -220,7 +220,7 @@
       <section class="topCampaign topCampaign-wrapper">
         <div class="inner">
           <div class="topCampaign__swiper-button-relative">
-            <div class="section-titles">
+            <div class="topCampaign__titles section-titles">
               <p class="section-titles__english">Campaign</p>
               <h2 class="section-titles__japanese">キャンペーン</h2>
             </div>
@@ -230,7 +230,7 @@
             </div>
           </div>
           <div class="topCampaign swiper" id="js-topCampaignSwiper">
-            <div class="topCampaign__slider-wrapper swiper-wrapper">
+            <div class="topCampaign__slider-wrapper campaign-cards swiper-wrapper">
               <a href="#" class="campaign-card--slide swiper-slide">
                 <figure class="campaign-card__img">
                   <img src="./assets/images/common/campaign1.png" alt="色鮮やかな魚たちの写真" />
@@ -317,7 +317,7 @@
       <!--About us-->
       <section class="about-us about-us-wrapper">
         <div class="inner">
-          <div class="section-titles">
+          <div class="about-us__titles section-titles">
             <p class="section-titles__english">About us</p>
             <h2 class="section-titles__japanese">私たちについて</h2>
           </div>
@@ -350,24 +350,24 @@
       <!--Information-->
       <section class="top-info top-info-wrapper">
         <div class="top-info__inner">
-          <div class="section-titles">
+          <div class="top-info__section-titles section-titles">
             <p class="section-titles__english">Information</p>
             <h2 class="section-titles__japanese">ダイビング情報</h2>
-            <div class="info__content-wrapper">
-              <div class="info__content info__content--top">
-                <div class="info__img js-color-box"><img src="./assets/images/common/information.png" alt="海の中、黄色い魚が２匹サンゴ礁の中を泳いでいる" /></div>
-                <div class="info__texts">
-                  <h3 class="info__title">ライセンス講習</h3>
-                  <div class="info__text">
-                    当店はダイビングライセンス（Cカード）世界最大の教育機関PADIの「正規店」として店舗登録されています。<br />
-                    正規登録店として、安心安全に初めての方でも安心安全にライセンス取得をサポート致します。
-                  </div>
-                  <div class="top-info__btn-wrapper">
-                    <a href="#" class="btn"
-                      >View more
-                      <span></span>
-                    </a>
-                  </div>
+          </div>
+          <div class="top-info__content-wrapper info__content-wrapper">
+            <div class="info__content info__content--top">
+              <div class="info__img js-color-box"><img src="./assets/images/common/information.png" alt="海の中、黄色い魚が２匹サンゴ礁の中を泳いでいる" /></div>
+              <div class="info__texts">
+                <h3 class="info__title">ライセンス講習</h3>
+                <div class="info__text">
+                  当店はダイビングライセンス（Cカード）世界最大の教育機関PADIの「正規店」として店舗登録されています。<br />
+                  正規登録店として、安心安全に初めての方でも安心安全にライセンス取得をサポート致します。
+                </div>
+                <div class="top-info__btn-wrapper">
+                  <a href="#" class="btn"
+                    >View more
+                    <span></span>
+                  </a>
                 </div>
               </div>
             </div>
@@ -384,7 +384,7 @@
           </div>
           <div class="top-blog__cards-wrapper">
             <div class="top-blog__cards">
-              <a href="#" class="blog-card">
+              <a href="#" class="top-blog__card blog-card">
                 <figure class="blog-card__img">
                   <img src="./assets/images/common/blog1.png" alt="ピンク色の珊瑚の写真" />
                 </figure>
@@ -394,7 +394,7 @@
                   <div class="blog-card__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</div>
                 </div>
               </a>
-              <a href="#" class="blog-card">
+              <a href="#" class="top-blog__card blog-card">
                 <figure class="blog-card__img">
                   <img src="./assets/images/common/blog2.png" alt="こちらに向かって泳ぐウミガメの写真" />
                 </figure>
@@ -404,7 +404,7 @@
                   <div class="blog-card__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</div>
                 </div>
               </a>
-              <a href="#" class="blog-card">
+              <a href="#" class="top-blog__card blog-card">
                 <figure class="blog-card__img">
                   <img src="./assets/images/common/blog3.png" alt="イソギンチャクの中から顔をのぞかせているカクレクマノミ" />
                 </figure>
@@ -428,12 +428,12 @@
       <section class="top-voice top-voice-wrapper">
         <div class="top-voice__inner">
           <div class="top-voice__decoration-upper"><img src="./assets/images/common/decoration-fish-right.svg" alt="魚群のイラスト" /></div>
-          <div class="section-titles">
+          <div class="top-voice__section-titles section-titles">
             <p class="section-titles__english">Voice</p>
             <h2 class="section-titles__japanese">お客様の声</h2>
           </div>
           <div class="top-voice__cards-wrapper">
-            <div class="voice-cards">
+            <div class="top-voice__cards voice-cards">
               <div class="voice-card">
                 <div class="voice-card__info">
                   <div class="voice-card__customer-data-wrapper">
@@ -484,7 +484,7 @@
       <!--price-->
       <section class="top-price top-price-wrapper">
         <div class="top-price__inner">
-          <div class="section-titles">
+          <div class="top-price__section-titles section-titles">
             <p class="section-titles__english">Price</p>
             <h2 class="section-titles__japanese">料金一覧</h2>
           </div>
@@ -625,7 +625,7 @@
             </div>
           </div>
         </div>
-        <div class="site-map">
+        <div class="footer__site-map site-map">
           <div class="site-map__sp-layout">
             <div class="site-map__content">
               <div class="site-map__main-title"><a href="#">キャンペーン</a></div>
@@ -665,7 +665,7 @@
             <ul class="site-map__main">
               <li class="site-map__main-title"><a href="#">よくある質問</a></li>
               <li class="site-map__main-title">
-                <a href="#">プライバシー<br class="pc-none" />ポリシー</a>
+                <a href="#">プライバシー<wbr />ポリシー</a>
               </li>
               <li class="site-map__main-title"><a href="#">利用規約</a></li>
               <li class="site-map__main-title"><a href="#">お問い合わせ</a></li>
