--- a/src/index.html
+++ b/src/index.html
@@ -363,7 +363,7 @@
                   当店はダイビングライセンス（Cカード）世界最大の教育機関PADIの「正規店」として店舗登録されています。<br />
                   正規登録店として、安心安全に初めての方でも安心安全にライセンス取得をサポート致します。
                 </div>
-                <div class="top-info__btn-wrapper">
+                <div class="info__btn-wrapper">
                   <a href="#" class="btn"
                     >View more
                     <span></span>
