--- a/src/index.html
+++ b/src/index.html
@@ -231,7 +231,7 @@
           </div>
           <div class="topCampaign swiper" id="js-topCampaignSwiper">
             <div class="topCampaign__slider-wrapper campaign-cards swiper-wrapper">
-              <a href="#" class="campaign-card--slide swiper-slide">
+              <a href="#" class="campaign-cards--item campaign-card campaign-card--slide swiper-slide">
                 <figure class="campaign-card__img">
                   <img src="./assets/images/common/campaign1.png" alt="色鮮やかな魚たちの写真" />
                 </figure>
@@ -249,7 +249,7 @@
                   </div>
                 </div>
               </a>
-              <a href="#" class="campaign-card--slide swiper-slide">
+              <a href="#" class="campaign-cards--item campaign-card campaign-card--slide swiper-slide">
                 <figure class="campaign-card__img">
                   <img src="./assets/images/common/campaign2.png" alt="船とエメラルドグリーンのビーチ" />
                 </figure>
@@ -267,7 +267,7 @@
                   </div>
                 </div>
               </a>
-              <a href="#" class="campaign-card--slide swiper-slide">
+              <a href="#" class="campaign-cards--item campaign-card campaign-card--slide swiper-slide">
                 <figure class="campaign-card__img">
                   <img src="./assets/images/common/campaign3.png" alt="小さなクラゲの大群" />
                 </figure>
@@ -285,7 +285,7 @@
                   </div>
                 </div>
               </a>
-              <a href="#" class="campaign-card--slide swiper-slide">
+              <a href="#" class="campaign-cards--item campaign-card campaign-card--slide swiper-slide">
                 <figure class="campaign-card__img">
                   <img src="./assets/images/common/campaign4.png" alt="ダイビングを楽しむ２人組" />
                 </figure>
@@ -316,7 +316,7 @@
       </section>
       <!--About us-->
       <section class="about-us about-us-wrapper">
-        <div class="inner">
+        <div class="about-us__inner inner">
           <div class="about-us__titles section-titles">
             <p class="section-titles__english">About us</p>
             <h2 class="section-titles__japanese">私たちについて</h2>
@@ -349,21 +349,21 @@
       </section>
       <!--Information-->
       <section class="top-info top-info-wrapper">
-        <div class="top-info__inner">
+        <div class="top-info__inner inner">
           <div class="top-info__section-titles section-titles">
             <p class="section-titles__english">Information</p>
             <h2 class="section-titles__japanese">ダイビング情報</h2>
           </div>
-          <div class="top-info__content-wrapper info__content-wrapper">
-            <div class="info__content info__content--top">
-              <div class="info__img js-color-box"><img src="./assets/images/common/information.png" alt="海の中、黄色い魚が２匹サンゴ礁の中を泳いでいる" /></div>
-              <div class="info__texts">
-                <h3 class="info__title">ライセンス講習</h3>
-                <div class="info__text">
+          <div class="top-info__content-wrapper">
+            <div class="top-info__content">
+              <div class="top-info__img js-color-box"><img src="./assets/images/common/information.png" alt="海の中、黄色い魚が２匹サンゴ礁の中を泳いでいる" /></div>
+              <div class="top-info__texts">
+                <h3 class="top-info__title">ライセンス講習</h3>
+                <div class="top-info__text">
                   当店はダイビングライセンス（Cカード）世界最大の教育機関PADIの「正規店」として店舗登録されています。<br />
                   正規登録店として、安心安全に初めての方でも安心安全にライセンス取得をサポート致します。
                 </div>
-                <div class="info__btn-wrapper">
+                <div class="top-info__btn-wrapper">
                   <a href="#" class="btn"
                     >View more
                     <span></span>
@@ -376,11 +376,11 @@
       </section>
       <!--Blog-->
       <section class="top-blog top-blog-wrapper">
-        <div class="top-blog__inner">
+        <div class="top-blog__inner inner">
           <div class="top-blog__decoration"><img src="./assets/images/common/decoration-fish-white.png" alt="魚群のイラスト" /></div>
-          <div class="top-blog__section-titles">
-            <p class="top-blog__section-titles__english">Blog</p>
-            <h2 class="top-blog__section-titles__japanese">ブログ</h2>
+          <div class="top-blog__section-titles section-titles">
+            <p class="section-titles__english section-titles__english--white">Blog</p>
+            <h2 class="section-titles__japanese section-titles__japanese--white">ブログ</h2>
           </div>
           <div class="top-blog__cards-wrapper">
             <div class="top-blog__cards">
@@ -426,7 +426,7 @@
       </section>
       <!--Voice-->
       <section class="top-voice top-voice-wrapper">
-        <div class="top-voice__inner">
+        <div class="top-voice__inner inner">
           <div class="top-voice__decoration-upper"><img src="./assets/images/common/decoration-fish-right.svg" alt="魚群のイラスト" /></div>
           <div class="top-voice__section-titles section-titles">
             <p class="section-titles__english">Voice</p>
@@ -483,7 +483,7 @@
       </section>
       <!--price-->
       <section class="top-price top-price-wrapper">
-        <div class="top-price__inner">
+        <div class="top-price__inner inner">
           <div class="top-price__section-titles section-titles">
             <p class="section-titles__english">Price</p>
             <h2 class="section-titles__japanese">料金一覧</h2>
@@ -572,7 +572,7 @@
       </section>
       <!--contact-->
       <section class="contact contact-wrapper">
-        <div class="contact__inner">
+        <div class="contact__inner inner">
           <div class="contact__decoration"><img src="./assets/images/common/decoration-fish.png" alt="魚群のイラスト" /></div>
           <div class="contact__content-inner">
             <div class="contact__address-wrapper">
