--- a/src/index.html
+++ b/src/index.html
@@ -39,22 +39,19 @@
   </head>
   <body>
     <!--loading
-      <div class="top-js-loading__start">
-        <div class="top-js-loading__topFV-texts topFV-texts">
-          <h1 class="top-js-loading__topFV-main-text topFV-main-text">DIVING</h1>
-          <p class="top-js-loading__topFV-sub-text topFV-sub-text">into the ocean</p>
-        </div>
-      </div>
+    <div class="top-js-loading">
+      <div class="top-js-loading__start"></div>
       <div class="top-js-loading__middle">
-        <div class="top-js-loading__middle-left"></div>
-        <div class="top-js-loading__middle-right"></div>
+        <div class="top-js-loading__left"></div>
+        <div class="top-js-loading__right"></div>
       </div>
       <div class="top-js-loading__last">
-        <div class="topFV-texts">
-          <h1 class="topFV-main-text">DIVING</h1>
-          <p class="topFV-sub-text">into the ocean</p>
+        <div class="top-js-loading__texts">
+          <h1 class="top-js-loading__main-text">DIVING</h1>
+          <p class="top-js-loading__sub-text">into the ocean</p>
         </div>
-      </div>-->
+      </div>
+    </div>-->
     <!--header-->
     <header class="header">
       <!--SP-hamburger-header-->
@@ -231,7 +228,7 @@
           </div>
           <div class="topCampaign swiper" id="js-topCampaignSwiper">
             <div class="topCampaign__slider-wrapper campaign-cards swiper-wrapper">
-              <a href="#" class="campaign-cards--item campaign-card campaign-card--slide swiper-slide">
+              <a href="#" class="campaign-cards__item campaign-card campaign-card--slide swiper-slide">
                 <figure class="campaign-card__img">
                   <img src="./assets/images/common/campaign1.png" alt="色鮮やかな魚たちの写真" />
                 </figure>
@@ -249,7 +246,7 @@
                   </div>
                 </div>
               </a>
-              <a href="#" class="campaign-cards--item campaign-card campaign-card--slide swiper-slide">
+              <a href="#" class="campaign-cards__item campaign-card campaign-card--slide swiper-slide">
                 <figure class="campaign-card__img">
                   <img src="./assets/images/common/campaign2.png" alt="船とエメラルドグリーンのビーチ" />
                 </figure>
@@ -267,7 +264,7 @@
                   </div>
                 </div>
               </a>
-              <a href="#" class="campaign-cards--item campaign-card campaign-card--slide swiper-slide">
+              <a href="#" class="campaign-cards__item campaign-card campaign-card--slide swiper-slide">
                 <figure class="campaign-card__img">
                   <img src="./assets/images/common/campaign3.png" alt="小さなクラゲの大群" />
                 </figure>
@@ -285,7 +282,7 @@
                   </div>
                 </div>
               </a>
-              <a href="#" class="campaign-cards--item campaign-card campaign-card--slide swiper-slide">
+              <a href="#" class="campaign-cards__item campaign-card campaign-card--slide swiper-slide">
                 <figure class="campaign-card__img">
                   <img src="./assets/images/common/campaign4.png" alt="ダイビングを楽しむ２人組" />
                 </figure>
@@ -306,7 +303,7 @@
             </div>
           </div>
           <div class="topCampaign__btn-wrapper">
-            <a href="#" class="btn"
+            <a href="#" class="topCampaign__btn btn"
               >View more
               <span></span>
             </a>
@@ -335,7 +332,7 @@
               <div class="about-us__text">
                 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
                 <div class="about-us__btn-wrapper">
-                  <a href="#" class="btn"
+                  <a href="#" class="about-us__btn btn"
                     >View more
                     <span></span>
                   </a>
@@ -343,7 +340,7 @@
               </div>
             </div>
           </div>
-          <div class="about-us__decoration"><img src="./assets/images/common/about-us-decoratoin.png" alt="珊瑚のイラストe" /></div>
+          <div class="about-us__decoration"><img src="./assets/images/common/about-us-decoratoin.png" alt="珊瑚のイラスト" /></div>
         </div>
         <!--inner閉じタグ-->
       </section>
@@ -364,7 +361,7 @@
                   正規登録店として、安心安全に初めての方でも安心安全にライセンス取得をサポート致します。
                 </div>
                 <div class="top-info__btn-wrapper">
-                  <a href="#" class="btn"
+                  <a href="#" class="top-info__btn btn"
                     >View more
                     <span></span>
                   </a>
@@ -383,8 +380,8 @@
             <h2 class="section-titles__japanese section-titles__japanese--white">ブログ</h2>
           </div>
           <div class="top-blog__cards-wrapper">
-            <div class="top-blog__cards">
-              <a href="#" class="top-blog__cards-item top-blog__card blog-card">
+            <div class="top-blog__cards blog-cards">
+              <a href="#" class="blog-cards__item blog-card">
                 <figure class="blog-card__img">
                   <img src="./assets/images/common/blog1.png" alt="ピンク色の珊瑚の写真" />
                 </figure>
@@ -394,7 +391,7 @@
                   <div class="blog-card__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</div>
                 </div>
               </a>
-              <a href="#" class="top-blog__cards-item top-blog__card blog-card">
+              <a href="#" class="blog-cards__item blog-card">
                 <figure class="blog-card__img">
                   <img src="./assets/images/common/blog2.png" alt="こちらに向かって泳ぐウミガメの写真" />
                 </figure>
@@ -404,7 +401,7 @@
                   <div class="blog-card__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</div>
                 </div>
               </a>
-              <a href="#" class="top-blog__cards-item top-blog__card blog-card">
+              <a href="#" class="blog-cards__item blog-card">
                 <figure class="blog-card__img">
                   <img src="./assets/images/common/blog3.png" alt="イソギンチャクの中から顔をのぞかせているカクレクマノミ" />
                 </figure>
@@ -417,7 +414,7 @@
             </div>
           </div>
           <div class="top-blog__btn-wrapper">
-            <a href="#" class="btn"
+            <a href="#" class="top-blog__btn btn"
               >View more
               <span></span>
             </a>
@@ -473,7 +470,7 @@
             </div>
           </div>
           <div class="top-voice__btn-wrapper">
-            <a href="#" class="btn"
+            <a href="#" class="top-voice__btn btn"
               >View more
               <span></span>
             </a>
@@ -562,7 +559,7 @@
             </div>
           </div>
           <div class="top-price__btn-wrapper">
-            <a href="#" class="btn"
+            <a href="#" class="top-price__btn btn"
               >View more
               <span></span>
             </a>
@@ -596,7 +593,7 @@
               </div>
               <p class="contact__text">ご予約・お問い合わせはコチラ</p>
               <div class="contact__btn-wrapper">
-                <a href="#" class="btn"
+                <a href="#" class="contact__btn btn"
                   >Contact us
                   <span></span>
                 </a>
@@ -611,7 +608,7 @@
       <div class="footer__js-scroll-top" id="footer__js-scroll-top">
         <a href="#"><img src="./assets/images/common/scroll-top.png" alt="上へ戻る矢印" /></a>
       </div>
-      <div class="inner">
+      <div class="footer__inner">
         <div class="footer__icons">
           <div class="footer__logo">
             <a href="index.html"><img src="./assets/images/common/logo.png" alt="コードアップスのロゴ" /></a>
